# HEPi

./: .buildinfo  .coveragerc  .gitignore  .readthedocs.yml  AUTHORS  CITATION.cff  MANIFEST.in  Makefile  Messages.out  README.md  TODO  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py
.github/workflows/: all.yml  ci.yml  devel.yml  fast-forward.yml  ff-pr.yml  release.yml  stable.yml  tag.yml  test.yml  unstable.yml
.ipynb_checkpoints/: distribute_demo-checkpoint.ipynb
_downloads/c302114f45a6a78a99c175867f654349/: index-3.py
_modules/: hepi.html  index.html
_modules/hepi/: _version.html  cluster.html  fast.html  input.html  interpolate.html  load.html  order.html  output.html  particles.html  plot.html  results.html  run.html  util.html
_sources/: index.rst.txt
_sources/examples/: demo_00_resummino.ipynb.txt  demo_01_write.ipynb.txt  demo_interpolate.ipynb.txt  demo_resummino.ipynb.txt  demo_write.ipynb.txt  test_madgraph.ipynb.txt  test_nnllfast.ipynb.txt  test_spheno.ipynb.txt
autoapi/: index.html
autoapi/hepi/: index.html
binder/: Dockerfile
cluster/: .run_mass_gaugino.py.swp  __init__.py  plot.py  run.py  run_invariant_mass.py  run_mass.py  run_mass_gaugino.py  run_mass_gaugino_no_pdf.py  run_mass_plehn.py  run_mass_squark.py  run_mass_squark_no_pdf.py  run_mass_squark_pdf.py  run_pdf.py  run_plehn.py  run_plehn_mass.py  run_plehn_scale.py  run_scale.py  run_scale_plehn.py  run_table_gaugino.py  run_table_squark.py
debug/: merge.py  test_both_nll.ipynb
debug/tests/: MG5_debug  Untitled.ipynb  comp_automized.ipynb  fort.10  plot_comp.ipynb  plot_scale.ipynb  scenarioA.in  scenarioB_mod.in  spheno_tmp.in  test.ipynb  test_mg-Copy1.ipynb  test_mg.ipynb  test_nllfast.ipynb  test_ppk.ipynb  test_rnlo.ipynb  test_rnlo3.ipynb  test_scale.ipynb
distribute/: 13000_hino_deg_1000022_-1000024_NNLL.json  13000_hino_deg_1000022_1000023_NNLL.json  13000_hino_deg_1000022_1000024_NNLL.json  13000_hino_deg_1000024_-1000024_NNLL.json  13000_hino_nondeg_1000022_1000023_NNLL.json  13000_hino_nondeg_1000023_-1000024_NNLL.json  13000_hino_nondeg_1000023_1000024_NNLL.json  13000_hino_nondeg_1000024_-1000024_NNLL.json  13000_sleptons_1000011_-1000011_NNLL.json  13000_sleptons_1000015_-1000015_NNLL.json  13000_sleptons_2000011_-2000011_NNLL.json  13000_sneutrinos_-1000015_1000016_NNLL.json  13000_sneutrinos_1000011_-1000012_NNLL.json  13000_sneutrinos_1000015_-1000016_NNLL.json  13000_wino_1000023_-1000024_NNLL.json  13000_wino_1000023_1000024_NNLL.json  13000_wino_1000024_-1000024_NNLL.json  13600_hino_deg_1000022_-1000024_NNLL.json  13600_hino_deg_1000022_1000023_NNLL.json  13600_hino_deg_1000022_1000024_NNLL.json  13600_hino_deg_1000024_-1000024_NNLL.json  13600_hino_nondeg_1000022_1000023_NNLL.json  13600_hino_nondeg_1000023_-1000024_NNLL.json  13600_hino_nondeg_1000023_1000024_NNLL.json  13600_hino_nondeg_1000024_-1000024_NNLL.json  13600_sleptons_1000011_-1000011_NNLL.json  13600_sleptons_1000015_-1000015_NNLL.json  13600_sleptons_2000011_-2000011_NNLL.json  13600_sneutrinos_-1000015_1000016_NNLL.json  13600_sneutrinos_1000011_-1000012_NNLL.json  13600_sneutrinos_1000015_-1000016_NNLL.json  13600_wino_1000023_-1000024_NNLL.json  13600_wino_1000023_1000024_NNLL.json  13600_wino_1000024_-1000024_NNLL.json  Untitled.ipynb  dist-sneutrinos.ipynb  distribute-sq.ipynb  distribute.ipynb  distribute_demo.ipynb  distribute_demo_ewkinos.ipynb  (+37 more)
docs/: Makefile
examples/: demo_00_resummino.html  demo_01_write.html  demo_02_interpolate.html  demo_03_distribute.html  demo_03_distribute.ipynb  demo_distribute.ipynb  demo_resummino.html  demo_write.html  run_mass_plehn.py  run_scale_plehn.py  run_table_squark.py  test_distribute.html  test_feynhiggs.html  test_feynhiggs.ipynb  test_interpolate.html  test_madgraph.html  test_nllfast.html  test_nllfast.ipynb  test_nnllfast.html  test_pyslha.html  test_pyslha.ipynb  test_softsusy.html  test_softsusy.ipynb  test_spheno.html  test_spheno.ipynb  test_write.html
hepi/: __init__.py  _version.py  fast.py  input.py  interpolate.py  load.py  order.py  output.py  particles.py  plot.py  results.py  run.py  util.py
resummino/: resummino_parse.py  resummino_plot.py  resummino_run.py  resummino_scan.py
scripts/: hepi-fast  old__init__.py  run.py  run_invariant_mass.py  run_mass_gaugino.py  run_mass_squark.py  run_pdf.py  run_scale.py  run_table_gaugino.py
test/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: .scenarioB.in.swp  LesHouches.in  ME5_debug  MG5_debug  comp_automized.ipynb  error_test.ipynb  inv_mass-Copy1.ipynb  inv_mass.ipynb  mastercode2.in  mg_vs_rs_LO.ipynb  plot.ipynb  plot_comp.ipynb  plot_scale.ipynb  plot_template.in  py.py  scenarioB.in  spheno_tmp.in  sps1a1000.in  sps1a1000_mod.in  test.ipynb  test.py  test2.ipynb  test2.py  test_2dplot.ipynb  test_hepi-fast.py  test_hepifast.py  test_mg-Copy1.ipynb  test_mg.ipynb  test_mg_comp-Copy1.ipynb  test_mg_comp.ipynb  test_nll_fast.py  test_nnll_fast.py  test_pdf.ipynb  test_ppk.ipynb  test_prospino2.ipynb  test_resummino.py  test_rnlo.ipynb  test_rnlo2.ipynb  test_run_plehn.ipynb  test_scale.ipynb  (+3 more)
(+1842 files in other folders)
