[tool.poetry]
name = "hepi"
version = "0.0.0"
description = "Interface to High Energy Physics tools."
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
readme = "README.md"
repository = "https://github.com/APN-Pucky/HEPi"

[tool.poetry.dependencies]
python = "^3.9"
uncertainties="*"
numpy="*"
matplotlib="*"
scipy  = ">=1.7.0"
sympy= "*"
pyslha = "*"
particle = "*"
pqdm = "*"
pandas = ">=1.0.0"
smpl = ">=1.3.0"
validators = "*"


# does not exist on pypi for recent pythons
#lhapdf = {version = "^6", optional = true}


[tool.poetry.scripts]
hepi-fast = "hepi.fast:main"

[tool.poetry.extras]
lhapdf = ["lhapdf"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "<8.0.0" # pinned due to RTD issues
sphinx-rtd-theme = "*"
sphinxcontrib-napoleon = "*"
nbsphinx = "*"
jupyter-sphinx = "*"
sphinx-autoapi = "*"
sphinx_autobuild = "*"
sphinx_math_dollar = "*"
pandoc = "*"
numpydoc = "*"
myst-parser  = "*"
toml ="*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov =  "*"
pytest-profiling =  "*"
pytest-line-profiler-apn = ">=0.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.20,<4.0"
ipython =  "*"
jupyterlab =  "*"
jupyter = "*"
poetry-dynamic-versioning = {extras = ["plugin"], version = ">=1.0.0,<2.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
dirty = true
# modified dunami default pattern without v
pattern = '(?x)(?# ignore whitespace)^((?P<epoch>\d+)!)?(?P<base>\d+(\.\d+)*)(?# v1.2.3 or v1!2000.1.2)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\d+)?))?(?# b0)(\+(?P<tagged_metadata>.+))?$(?# +linux)'
strict = true
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.{{ distance }}{% endif %}"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [ 
    "-v","--cov=hepi","--cov-config=.coveragerc","--cov-append","--cov-report=term","--cov-report=xml","--doctest-modules","--ignore=docs/source/examples/output/"
]
testpaths = ["tests"]
filterwarnings = [
    'error',
    'ignore:PDF set .* not installed?:UserWarning',
    'ignore:Could not set new central scale .*:RuntimeWarning',
    'ignore: pkg_resources is deprecated as an API:DeprecationWarning',
]
