[build-system]
requires = [
  "hatchling",
  "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "hepi"
dynamic = ["version"]
description = "Interface to High Energy Physics tools."
readme = "README.md"
requires-python = ">=3.9"
keywords = []
authors = [
  { name = "Alexander Puck Neuwirth", email = "alexander@neuwirth-informatik.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering",
]

dependencies = [
    "uncertainties",
    "numpy",
    "matplotlib",
    "scipy >=1.7.0",
    "sympy",
    "pyslha",
    "particle",
    "pqdm",
    "pandas >=1.0.0",
    "smpl >=1.3.0",
    "validators",
]

[project.urls]
Documentation = "https://hepi.readthedocs.io/"
Issues = "https://github.com/APN-Pucky/HEPi/issues"
Source = "https://github.com/APN-Pucky/HEPi"

[project.optional-dependencies]
lhapdf = ["lhapdf"]
docs = [
    "sphinx <8.0.0",  # pinned due to RTD issues
    "sphinx-rtd-theme",
    "sphinxcontrib-napoleon",
    "nbsphinx",
    "jupyter-sphinx",
    "sphinx-autoapi",
    "sphinx_autobuild",
    "sphinx_math_dollar",
    "pandoc",
    "numpydoc",
    "myst-parser",
    "toml",
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-profiling",
    "pytest-line-profiler-apn >=0.1.3",
]

dev = [
    "pre-commit",
    "ipython",
    "jupyterlab",
    "jupyter",
]

[tool.hatch.envs.doc]
features = ["doc"]

[tool.hatch.envs.dev]
features = ["dev", "test"]

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "hepi/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [ 
    "-v","--cov=hepi","--cov-config=.coveragerc","--cov-append","--cov-report=term","--cov-report=xml","--doctest-modules","--ignore=docs/source/examples/output/"
]
testpaths = ["tests"]
filterwarnings = [
    'error',
    'ignore:PDF set .* not installed?:UserWarning',
    'ignore:Could not set new central scale .*:RuntimeWarning',
    'ignore: pkg_resources is deprecated as an API:DeprecationWarning',
]

[tool.coverage.run]
relative_files = true
omit = [
  "scripts/*",
  "./docs/source/conf.py",
]